# handover_failure_detection

./: .gitignore  README.md  _config.yml  index.md  requirements.txt
_layouts/: default.html
_sass/: jekyll-theme-dinky.scss
ms-tcn/: README.md  main.py  metrics.py  run.sh  trainer.py
ms-tcn/datasets/: handover_dataset.py
ms-tcn/models/: mstcn.py
pytorch-i3d-trainer/: README.md  get_i3d_features.py  get_i3d_features_optical_flow.py  handover_dataset.py  i3d_trainer.py  main.py  pytorch_i3d.py  run.sh
scripts/: resample.py
scripts/optical_flow/: CMakeLists.txt  README.md
scripts/optical_flow/src/: calculate_optical_flow.cpp
